--- a/projects/visualdesign.html
+++ b/projects/visualdesign.html
@@ -36,7 +36,7 @@
             <div class="modal-header">
                 <div class="col-12 d-flex justify-content-center">
                     <div class="col-12 col-lg-10 d-flex align-items-center header-content">
-                        <h1 class="modal-title" id="exampleModalLabel">Select Visual Design & Branding</h1>
+                        <h1 class="modal-title" id="exampleModalLabel">Visual Design & Branding</h1>
                         <a class="btn-close" href="/index.html"></a>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
             <div class="modal-body w-100 d-flex justify-content-center">
                 <div class="container-fluid">
                     <div
-                        class="row py-5 px-1 px-sm-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
+                        class="row py-5 px-1 px-sm-5 mt-3 mt-md-5 mb-5 d-flex justify-content-center visual-design-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Platform Launch Posters</h2>
                         <p class="col-12 text-center mt-0 mb-4">
                             Concepted and designed a series of posters advertising the launch of the Enterprise Account
@@ -124,19 +124,26 @@
                             </div>
                         </div>
                         <div class="col-12 col-md-10 mb-3 d-flex justify-content-center">
-                            <img class="col-12 px-2" src="/images/project-images/visualdesign/c3-summit-color.png">
+                            <div class="d-flex flex-column">
+                                <img class="col-12 px-2" src="/images/project-images/visualdesign/c3-summit-color.png">
+                            </div>
                         </div>
                         <p class="col-12 text-center mt-5 mb-3">
                             Sticker designs
                         </p>
                         <div class="col-12 col-md-10 mb-3 d-flex justify-content-center">
-                            <img class="col-12 px-2" src="/images/project-images/visualdesign/c3-summit-stickers.png">
+                            <div class="d-flex flex-column">
+                                <img class="col-12 px-2"
+                                    src="/images/project-images/visualdesign/c3-summit-stickers.png">
+                            </div>
                         </div>
                         <p class="col-12 text-center mt-5 mb-3">
                             Email banner image
                         </p>
                         <div class="col-12 col-md-10 mb-3 d-flex justify-content-center">
-                            <img class="col-10 px-2" src="/images/project-images/visualdesign/c3-summit-email.png">
+                            <div class="d-flex flex-column align-items-center">
+                                <img class="col-10 px-2" src="/images/project-images/visualdesign/c3-summit-email.png">
+                            </div>
                         </div>
                         <div class="col-12 col-md-10 mb-3 d-flex justify-content-center">
                             <div class="col-6">
@@ -144,8 +151,10 @@
                                     Name badge
                                 </p>
                                 <div class="col-12 mb-3 d-flex justify-content-center">
-                                    <img class="col-8 px-2"
-                                        src="/images/project-images/visualdesign/c3-summit-name.png">
+                                    <div class="d-flex flex-column align-items-center">
+                                        <img class="col-8 px-2"
+                                            src="/images/project-images/visualdesign/c3-summit-name.png">
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-6">
@@ -153,8 +162,10 @@
                                     Wayfinding signage
                                 </p>
                                 <div class="col-12 mb-3 d-flex justify-content-center">
-                                    <img class="col-8 px-2"
-                                        src="/images/project-images/visualdesign/c3-summit-wayfinding.png">
+                                    <div class="d-flex flex-column align-items-center">
+                                        <img class="col-8 px-2"
+                                            src="/images/project-images/visualdesign/c3-summit-wayfinding.png">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -177,9 +188,9 @@
                             Concepted and designed various new packaging, products, and merchandise for the Doritos
                             brand.
                         </p>
-                        <div class="col-12 px-0 d-flex justify-content-center">
+                        <div class="col-12 px-0 d-flex flex-row justify-content-center">
                             <img class="col-4" src="/images/project-images/visualdesign/dor-product1.png">
-                            <img class="col-4 mx-3" src="/images/project-images/visualdesign/dor-product2.png">
+                            <img class="col-4 mx-0 mx-md-3" src="/images/project-images/visualdesign/dor-product2.png">
                             <img class="col-4" src="/images/project-images/visualdesign/dor-product3.png">
                         </div>
                     </div>
@@ -191,10 +202,10 @@
                             Unilever and the NCAA.
                         </p>
                         <div class="col-12 col-md-6 no-gutters d-flex flex-column">
-                            <img src="/images/project-images/visualdesign/UL-BDB1.png">
+                            <img class="col-12" src="/images/project-images/visualdesign/UL-BDB1.png">
                         </div>
                         <div class="col-12 col-md-6 no-gutters d-flex flex-column">
-                            <img src="/images/project-images/visualdesign/UL-BDB2.png">
+                            <img class="col-12" src="/images/project-images/visualdesign/UL-BDB2.png">
                         </div>
                     </div>
                     <div
@@ -205,10 +216,12 @@
                             were inspired by a corner market or convenience store and a music festival.
                         </p>
                         <div class="col-12 col-md-6 d-flex flex-column">
-                            <img class="mb-4 image-shadow" src="/images/project-images/visualdesign/lays-display2.png">
+                            <img class="col-12 mb-4 image-shadow"
+                                src="/images/project-images/visualdesign/lays-display2.png">
                         </div>
                         <div class="col-12 col-md-6 d-flex flex-column">
-                            <img class="mb-4 image-shadow" src="/images/project-images/visualdesign/lays-display1.png">
+                            <img class="col-12 mb-4 image-shadow"
+                                src="/images/project-images/visualdesign/lays-display1.png">
                         </div>
                     </div>
                     <div class="row py-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
