added hero images and made content updates

--- a/index.html
+++ b/index.html
@@ -195,19 +195,20 @@
             <div class="container-fluid">
                 <div class="row d-flex justify-content-between">
                     <div class="col-12 col-md-6 mb-3 px-md-5">
-                        <p class="contact-info col-12 col-md-11 bio">
-                            I believe in the power creativity has to solve any problem big or small. I also believe in
+                        <p class="contact-info col-12 col-md-11 mb-3 bio">
+                            I’m a firm believer in the power creativity has to solve any problem big or small. I also
+                            believe in
                             the
-                            lifelong pursuit of everything
+                            lifelong pursuit of things that are
                             fun
                             and
                             fulfilling. “Fun-filling,” if you will.
                         </p>
-                        <p class="contact-info col-md-11 bio">
+                        <p class="contact-info col-md-11 mb-3 bio">
                             Those who know me know that I value humor, authenticity, and empathy above
                             all else.
                         </p>
-                        <p class="contact-info col-md-11 bio">
+                        <p class="contact-info col-md-11 mb-3 bio">
                             If you share these values and feel I could be of service to you or your organization, I
                             would
                             love to hear from you. Please
