--- a/projects/autoloantools.html
+++ b/projects/autoloantools.html
@@ -43,24 +43,29 @@
             </div>
             <div class="modal-body w-100 d-flex justify-content-center">
                 <div class="container-fluid">
+                    <img class="col-12 mt-0 mt-md-3 round-corners" src="/images/project-images/autoloantools-hero.jpg">
                     <div class="col-12 d-flex justify-content-center">
                         <div class="col-12 col-lg-8">
                             <div class="row mt-0 mt-md-3 mb-5">
                                 <h2 class="my-4 project-title">Auto Loan Tracker</h2>
                                 <h2 class="modal-subhead">Problem</h2>
                                 <div class="col-12">
-                                    A large number of auto loan customers reaching the end of their loan term discovered
+                                    In 2017, a large number of Capital One auto loan customers reaching the end of their
+                                    loan term
+                                    discovered
                                     a
-                                    remaining balance on their account ($200 on average) due to deviations in their
+                                    remaining balance on their account ($200 on average). This was typically due to
+                                    deviations in their
                                     repayment
-                                    history resulting in additional accrued interest over the life of their loan. This
+                                    history resulting in additional accrued interest over the life of their loan which
                                     led to
                                     increased call volume and an overall frustrating experience for customers trying to
                                     understand what caused the balance to remain after they made, what they thought, was
                                     their
                                     last payment. My team was tasked with developing a set of features focused on
                                     educating and
-                                    helping customers prevent events that would lead to the ending balance.
+                                    helping customers prevent events that would lead to this balance at the end of their
+                                    loan.
                                 </div>
                             </div>
                             <div class="row mb-5">
@@ -84,7 +89,7 @@
                                     tasked
                                     with concepting, designing, and testing solutions before supporting our
                                     engineeringing
-                                    team’s build and shipment of the feature.
+                                    team’s build and shipment of the experience.
                                 </div>
                             </div>
                             <div class="row mb-5">
@@ -96,10 +101,10 @@
                                     this
                                     tool, users could find out things like whether or not they were ahead or behind on
                                     their
-                                    repayment plan. If they were behind, how much would be due at the end of their loan?
+                                    repayment plan. If they were behind, how much would be due at the end of their loan.
                                     Inversely, if they were paying extra or early, how much they would save and if
                                     possible, how
-                                    much earlier they would pay off the loan?
+                                    much earlier they would pay off the loan.
                                 </div>
                             </div>
                         </div>
