--- a/projects/hueyweather.html
+++ b/projects/hueyweather.html
@@ -43,9 +43,10 @@
             </div>
             <div class="modal-body w-100 d-flex justify-content-center">
                 <div class="container-fluid">
+                    <img class="col-12 mt-0 mt-md-3 round-corners" src="/images/project-images/huey-hero.jpg">
                     <div class="col-12 d-flex justify-content-center">
                         <div class="col-12 col-lg-8">
-                            <div class="row mt-3 mt-md-5 mb-5">
+                            <div class="row mt-5 mb-5">
                                 <h2 class="modal-subhead">Challenge</h2>
                                 <div class="col-12">
                                     Merging a passion for weather forecasting, minimalist design, and trend analysis, I
@@ -79,6 +80,9 @@
                                             </li>
                                             <li>
                                                 Google Places API
+                                            </li>
+                                            <li>
+                                                Heroku
                                             </li>
                                             <li>
                                                 Github
