--- a/projects/monsterproject.html
+++ b/projects/monsterproject.html
@@ -51,11 +51,11 @@
                                     Inspire kids.
                                 </div>
                             </div>
-                            <div class="row mb-5">
+                            <div class="row mb-3">
                                 <h2 class="modal-subhead">Solution</h2>
                                 <p class="col-12">
                                     For the past few years I’ve organized this incredibly rewarding project for my
-                                    wife’s 1st
+                                    wife Laura’s 1st
                                     grade
                                     students.
                                     It’s called The Monster Project.
@@ -120,7 +120,7 @@
                                     part of
                                     this project. Huge shout out to everyone I’ve had the pleasure of collaborating with
                                     because
-                                    without each and every one of them, this would not be possible.
+                                    without each and every one of them, amazing work like this would not be possible.
                                 </p>
                                 <p>
                                     The following are some of the artistic contributions I’ve made to our project over
@@ -314,7 +314,7 @@
                                 <p class="col-12">
                                     If you love what you see here and would like to see more of it in the world please
                                     consider
-                                    a donation in support of the <a href="https://themonsterproject.org/faq"
+                                    a donation in support of the official <a href="https://themonsterproject.org/faq"
                                         target="_blank" rel="noopener noreferrer">Monster
                                         Project</a>.
                                 </p>
