--- a/projects/shoppingmobileapp.html
+++ b/projects/shoppingmobileapp.html
@@ -43,12 +43,14 @@
             </div>
             <div class="modal-body w-100 d-flex justify-content-center">
                 <div class="container-fluid">
+                    <img class="col-12 mt-0 mt-md-3 round-corners" src="/images/project-images/shopping-hero.jpg">
                     <div class="col-12 d-flex justify-content-center">
                         <div class="col-12 col-lg-8">
-                            <div class="row mt-3 mt-md-5 mb-5">
+                            <div class="row mt-5 mb-5">
                                 <h2 class="modal-subhead">Problem</h2>
                                 <div class="col-12">
-                                    Capital One acquired Wikibuy in fall 2018 and I was brought on to lead the design
+                                    Capital One acquired Wikibuy in fall 2018 and I was brought on shortly after to lead
+                                    their design
                                     team
                                     while
                                     working to integrate and improve the company’s product offering. The
@@ -80,7 +82,9 @@
                                     of
                                     viable solutions for improved core user flows and net new functionality that could
                                     be
-                                    implemented on shortened delivery timelines with our mobile engineering team.
+                                    implemented on a shortened delivery timeline with our mobile engineering team
+                                    leading
+                                    up to a national launch of our shopping platform.
                                 </div>
                             </div>
                             <div class="row mb-5">
