--- a/projects/skylanders3Dadventure.html
+++ b/projects/skylanders3Dadventure.html
@@ -146,8 +146,8 @@
                     <div class="row py-5 mb-3 d-flex justify-content-center skylanders-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Display Scanner and Coupon Page Design</h2>
                         <p class="col-10 text-center mt-0 mb-4">
-                            Using the app enables characters from the game to appear in 3D. Once the user captures an
-                            image
+                            Using the app enables characters from the game to appear in 3D. After a user captures a
+                            character
                             a coupon is awarded.
                         </p>
                         <div class="col-6 col-md-4 d-flex flex-column">
