--- a/projects/shoppingmobileapp.html
+++ b/projects/shoppingmobileapp.html
@@ -211,7 +211,7 @@
                             My team and I created over 60 unique homepage tile concepts across 5 main product
                             requirements.
                         </p>
-                        <img class="col-10" src="/images/project-images/shopping-hpconcepts.png">
+                        <img class="col-10 h-100" src="/images/project-images/shopping-hpconcepts.png">
                     </div>
                     <div class="row py-5 mb-5 d-flex justify-content-center shoppingmobileapp-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Rebrand Guidelines</h2>
@@ -220,7 +220,7 @@
                             marketing,
                             and agency teams during the rebrand of the Wikibuy platform to Capital One Shopping.
                         </p>
-                        <img class="col-10" src="/images/project-images/shopping-brand.png">
+                        <img class="col-10 h-100" src="/images/project-images/shopping-brand.png">
                     </div>
                     <div class="row py-5 mb-5 d-flex justify-content-center shoppingmobileapp-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">In-App Shopping Experience</h2>
@@ -231,10 +231,10 @@
                             find
                             the best deals.
                         </p>
-                        <img class="col-6 col-md-3" src="/images/project-images/shopping-webview1.png">
-                        <img class="col-6 col-md-3" src="/images/project-images/shopping-webview2.png">
-                        <img class="col-6 col-md-3" src="/images/project-images/shopping-webview3.png">
-                        <img class="col-6 col-md-3" src="/images/project-images/shopping-webview4.png">
+                        <img class="col-6 col-md-3 h-100" src="/images/project-images/shopping-webview1.png">
+                        <img class="col-6 col-md-3 h-100" src="/images/project-images/shopping-webview2.png">
+                        <img class="col-6 col-md-3 h-100" src="/images/project-images/shopping-webview3.png">
+                        <img class="col-6 col-md-3 h-100" src="/images/project-images/shopping-webview4.png">
                     </div>
                     <div class="row py-5 mb-5 d-flex justify-content-center shoppingmobileapp-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Automatic Coupons At Checkout</h2>
@@ -246,10 +246,10 @@
                             while
                             they shop and automatically applying coupon codes during checkout.
                         </p>
-                        <img class="col-6 col-md-3" src="/images/project-images/shopping-checkout1.png">
-                        <img class="col-6 col-md-3" src="/images/project-images/shopping-checkout2.png">
-                        <img class="col-6 col-md-3" src="/images/project-images/shopping-checkout3.png">
-                        <img class="col-6 col-md-3" src="/images/project-images/shopping-checkout4.png">
+                        <img class="col-6 col-md-3 h-100" src="/images/project-images/shopping-checkout1.png">
+                        <img class="col-6 col-md-3 h-100" src="/images/project-images/shopping-checkout2.png">
+                        <img class="col-6 col-md-3 h-100" src="/images/project-images/shopping-checkout3.png">
+                        <img class="col-6 col-md-3 h-100" src="/images/project-images/shopping-checkout4.png">
                     </div>
                 </div>
             </div>
