--- a/projects/autoloantools.html
+++ b/projects/autoloantools.html
@@ -140,9 +140,9 @@
                             Possible Auto Loan Tracker detail states including Default, Early Payoff Projected, and
                             Additional Balance Projected.
                         </p>
-                        <img class="col-10 col-md-4" src="/images/project-images/autoloantools-alt4.png">
-                        <img class="col-6 col-md-4" src="/images/project-images/autoloantools-alt5.png">
-                        <img class="col-6 col-md-4" src="/images/project-images/autoloantools-alt6.png">
+                        <img class="col-10 col-md-4 h-100" src="/images/project-images/autoloantools-alt4.png">
+                        <img class="col-6 col-md-4 h-100" src="/images/project-images/autoloantools-alt5.png">
+                        <img class="col-6 col-md-4 h-100" src="/images/project-images/autoloantools-alt6.png">
                     </div>
                     <hr class="my-5">
                     <div class="col-12 d-flex justify-content-center">
