--- a/projects/hueyweather.html
+++ b/projects/hueyweather.html
@@ -174,11 +174,11 @@
                         <div class="col-12 col-md-4 text-center align-self-center order-5 order-md-3 white-text">
                             <p class="mb-3">Death Valley 12am on a Wednesday in March</p>
                         </div>
-                        <img class="col-10 col-md-4 mb-5 order-2 order-md-4"
+                        <img class="col-10 col-md-4 mb-5 order-2 order-md-4 h-100"
                             src="/images/project-images/huey-forecast1.png">
-                        <img class="col-10 col-md-4 mb-5 order-4 order-md-5"
+                        <img class="col-10 col-md-4 mb-5 order-4 order-md-5 h-100"
                             src="/images/project-images/huey-forecast2.png">
-                        <img class="col-10 col-md-4 mb-5 order-5 order-md-6"
+                        <img class="col-10 col-md-4 mb-5 order-5 order-md-6 h-100"
                             src="/images/project-images/huey-forecast3.png">
                     </div>
                 </div>
