--- a/projects/shoppingmobileapp.html
+++ b/projects/shoppingmobileapp.html
@@ -211,7 +211,7 @@
                             My team and I created over 60 unique homepage tile concepts across 5 main product
                             requirements.
                         </p>
-                        <img class="col-10 h-100" src="/images/project-images/shopping-hpconcepts.png">
+                        <img class="col-12 col-lg-10 h-100" src="/images/project-images/shopping-hpconcepts.png">
                     </div>
                     <div class="row py-5 mb-5 d-flex justify-content-center shoppingmobileapp-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Rebrand Guidelines</h2>
@@ -220,7 +220,7 @@
                             marketing,
                             and agency teams during the rebrand of the Wikibuy platform to Capital One Shopping.
                         </p>
-                        <img class="col-10 h-100" src="/images/project-images/shopping-brand.png">
+                        <img class="col-12 col-lg-10 h-100" src="/images/project-images/shopping-brand.png">
                     </div>
                     <div class="row py-5 mb-5 d-flex justify-content-center shoppingmobileapp-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">In-App Shopping Experience</h2>
