--- a/projects/visualdesign.html
+++ b/projects/visualdesign.html
@@ -189,9 +189,10 @@
                             brand.
                         </p>
                         <div class="col-12 px-0 d-flex flex-row justify-content-center">
-                            <img class="col-4" src="/images/project-images/visualdesign/dor-product1.png">
-                            <img class="col-4 mx-0 mx-md-3" src="/images/project-images/visualdesign/dor-product2.png">
-                            <img class="col-4" src="/images/project-images/visualdesign/dor-product3.png">
+                            <img class="col-4 h-100" src="/images/project-images/visualdesign/dor-product1.png">
+                            <img class="col-4 mx-0 mx-md-3 h-100"
+                                src="/images/project-images/visualdesign/dor-product2.png">
+                            <img class="col-4 h-100" src="/images/project-images/visualdesign/dor-product3.png">
                         </div>
                     </div>
                     <div
@@ -232,7 +233,8 @@
                             Yes, a mullet. Glorious.
                         </p>
                         <div class="col-12 col-md-8 mb-3 d-flex justify-content-center">
-                            <img class="col-12 image-shadow" src="/images/project-images/visualdesign/ART-logo.png">
+                            <img class="col-12 h-100 image-shadow"
+                                src="/images/project-images/visualdesign/ART-logo.png">
                         </div>
                     </div>
                 </div>
