--- a/projects/generatormakerspace.html
+++ b/projects/generatormakerspace.html
@@ -150,10 +150,10 @@
                         hours.
                     </p>
                     <div class="row no-gutters mb-3 d-flex justify-content-center generator-image-container4">
-                        <div class="col-12 col-md-6 no-gutters d-flex flex-column">
+                        <div class="col-12 col-md-6 no-gutters d-flex flex-column h-100">
                             <img src="/images/project-images/generator-flyer1.png">
                         </div>
-                        <div class="col-12 col-md-6 no-gutters d-flex flex-column">
+                        <div class="col-12 col-md-6 no-gutters d-flex flex-column h-100">
                             <img src="/images/project-images/generator-flyer2.png">
                         </div>
                     </div>
