added meta tags and preview image

--- a/index.html
+++ b/index.html
@@ -27,8 +27,24 @@
     </script>
     <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32">
-    <title>Hello, Jonny!</title>
-    <meta name="description" content="Digital designer, problem solver, and high five enthusiast." />
+    <!-- Primary Meta Tags -->
+    <title>Hello, my name is Jonny Abowd.</title>
+    <meta name="title" content="Hello, my name is Jonny Abowd.">
+    <meta name="description" content="Digital designer, problem solver, and high five enthusiast.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.jonnyabowd.com/">
+    <meta property="og:title" content="Hello, my name is Jonny Abowd.">
+    <meta property="og:description" content="Digital designer, problem solver, and high five enthusiast.">
+    <meta property="og:image" content="./images/ja-image-preview.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.jonnyabowd.com/">
+    <meta property="twitter:title" content="Hello, my name is Jonny Abowd.">
+    <meta property="twitter:description" content="Digital designer, problem solver, and high five enthusiast.">
+    <meta property="twitter:image" content="./images/ja-image-preview.png">
     <meta name="robots" content="index, follow">
 </head>
 
@@ -202,7 +218,7 @@
                             lifelong pursuit of things that are
                             fun
                             and
-                            fulfilling. “Fun-filling,” if you will.
+                            fulfilling. Fun-filling, if you will.
                         </p>
                         <p class="contact-info col-md-11 mb-3 bio">
                             Those who know me know that I value humor, authenticity, and empathy above
