--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <meta property="og:title" content="Hello, my name is Jonny Abowd.">
     <meta property="og:description" content="Digital designer, problem solver, and high five enthusiast.">
-    <meta property="og:image" content="./images/ja-image-preview.png">
+    <meta property="og:image" content="https://www.jonnyabowd.com//images/ja-image-preview.png">
     <meta property="og:url" content="https://www.jonnyabowd.com/">
     <meta name="twitter:card" content="summary_large_image">
 
